--- a/keev-project/src/comparision.html
+++ b/keev-project/src/comparision.html
@@ -6,10 +6,10 @@
 
 
     <link href="../c3-0.7.1/c3.css" rel="stylesheet">
-    <link href="../bootstrap-4.1.3-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="../jquery-3.4.1.min.js"></script>
 
-    <script src="../bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- Load d3.js and c3.js -->
     <script src="../d3/d3.min.js" charset="utf-8"></script>
     <script src="../c3-0.7.1/c3.min.js"></script>
